syntax = "proto3";

package outgoing.chat.comet;
option go_package = "api";
option (gogoproto.marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Empty{}

message PushMessageReq {
    repeated string sids = 1  [(gogoproto.customname) = "SIDs"];
    bytes data = 2;
}

message BroadcastMessageReq {
    bytes data = 1;
}

service Chat {
    rpc PushMessage(PushMessageReq) returns (Empty);
    rpc BroadcastMessage(BroadcastMessageReq) returns (Empty);
}